# eanalizer

./: .gitignore  .pre-commit-config.yaml  AIDEV_GUIDELINES.md  CLAUDE.md  LICENSE  README.enea_downloader  README.md  eanalizer-cli  eanalizer-cli-completion.sh  eanalizer-completion.sh  enea-downloader-cli  enea_downloader.py  make-release  pyproject.toml  release.sh  run_downloader.py  run_eanalizer.py  update_translations.sh
.github/commands/: gemini-review.toml
.github/workflows/: ci.yml  gemini-dispatch.yml  gemini-review.yml  release.yml
cache/rce_prices/: 2024-07-01.json  2024-07-02.json  2024-07-03.json  2024-07-04.json  2024-07-05.json  2024-07-06.json  2024-07-07.json  2024-07-08.json  2024-07-09.json  2024-07-10.json  2024-07-11.json  2024-07-12.json  2024-07-13.json  2024-07-14.json  2024-07-15.json  2024-07-16.json  2024-07-17.json  2024-07-18.json  2024-07-19.json  2024-07-20.json  2024-07-21.json  2024-07-22.json  2024-07-23.json  2024-07-24.json  2024-07-25.json  2024-07-26.json  2024-07-27.json  2024-07-28.json  2024-07-29.json  2024-07-30.json  2024-07-31.json  2024-08-01.json  2024-08-02.json  2024-08-03.json  2024-08-04.json  2024-08-05.json  2024-08-06.json  2024-08-07.json  2024-08-08.json  2024-08-09.json  (+430 more)
config/: tariffs.csv
eanalizer/: cli.py  config.py  core.py  data_loader.py  downloader.py  downloader_cli.py  models.py  price_fetcher.py  tariffs.py
locales/: eanalizer.pot
locales/pl/LC_MESSAGES/: eanalizer.mo  eanalizer.po
scripts/: translate.py
taryfy/: analiza_taryf_G.csv
tests/: test_cli.py  test_config.py  test_core.py  test_data.csv  test_data_loader.py  test_downloader.py  test_tariffs.py
