[project]
name = "eanalizer"
version = "0.3.9"
description = "Aplikacja do analizy zużycia energii elektrycznej z danych od operatora Enea."
authors = [{ name = "TheUndefined" }]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.8"
keywords = ["enea", "energy", "analiza", "fotowoltaika"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "holidays>=0.40",
    "platformdirs>=4.0.0",
    "requests>=2.30.0",
]

[project.urls]
"Homepage" = "https://github.com/theundefined/eanalizer"
"Bug Tracker" = "https://github.com/theundefined/eanalizer/issues"

[project.scripts]
eanalizer = "eanalizer.cli:main"
enea-downloader = "eanalizer.downloader_cli:main"

[project.optional-dependencies]
dev = [
    "Babel",
    "ruff",
    "pre-commit",
]

[tool.setuptools]
packages = ["eanalizer"]
